Change Sybiltech to Sybiltec

--- a/404.html
+++ b/404.html
@@ -12,21 +12,21 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Page Not Found | Web Development & E-Commerce | Sybiltech</title>       
+        <title>Page Not Found | Web Development & E-Commerce | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="noindex" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Page Not Found | Web Development & E-Commerce | Sybiltech" />
+        <meta property="og:title" content="Page Not Found | Web Development & E-Commerce | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/404/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -86,7 +86,7 @@
                 <h3>We searched everywhere</h3>
                 <h4>The page you requested could have been moved or deleted.</h4>
                 <div class="padding-bottom padding-top">
-                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Sybiltech</a>
+                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Sybiltec</a>
                 </div>
                 <div class="padding-bottom padding-top">
                     <a class="btn-primary" href="/">Go Home</a>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
