--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -27,19 +27,19 @@ permalink: /5-best-tools-for-remote-working/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>5 Best Tools for Remote Working | Blog | Sybiltech</title>       
+        <title>5 Best Tools for Remote Working | Blog | Sybiltec</title>       
         <meta name="Description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="5 Best Tools for Remote Working | Blog | Sybiltech" />
+        <meta property="og:title" content="5 Best Tools for Remote Working | Blog | Sybiltec" />
         <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
         <meta property="og:url" content="https://sybiltec.com/5-best-tools-for-remote-working/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/tools-work-repair-hammer-screwdriver-chisel-spanner-1200x630.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -208,7 +208,7 @@ permalink: /5-best-tools-for-remote-working/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
