--- a/blog.html
+++ b/blog.html
@@ -15,21 +15,21 @@ permalink: /blog/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | Web Development &amp; E-Commerce Services | Sybiltech</title>       
-        <meta name="Description" content="Sybiltech provides website development and e-commerce
+        <title>Blog | Web Development &amp; E-Commerce Services | Sybiltec</title>       
+        <meta name="Description" content="Sybiltec provides website development and e-commerce
         services for SMEs. Read my blog posts here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog | Web Development &amp; E-Commerce Services | Sybiltech" />
-        <meta property="og:description" content="Sybiltech provides website development and e-commerce
+        <meta property="og:title" content="Blog | Web Development &amp; E-Commerce Services | Sybiltec" />
+        <meta property="og:description" content="Sybiltec provides website development and e-commerce
         services for SMEs. Read my blog posts here." />
         <meta property="og:url" content="https://sybiltec.com/blog/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -97,9 +97,9 @@ permalink: /blog/
                 <a href="https://sybiltec.com/6-reasons-to-use-shopify">Read More >></a>
                 <h2>WebTip Wednesday Series Launched on Twitter</h2>
                 <p>"WebTip Wednesday" is a new series of tweets for website development. Be 
-                    sure not to miss a tweet by following Sybiltech on Twitter: 
-                    <a href="https://twittwe.com/sybiltech1" target="_blank" rel="noopener 
-                    noreferrer">twitter.com/Sybiltech1</a>.</p>
+                    sure not to miss a tweet by following Sybiltec on Twitter: 
+                    <a href="https://twittwe.com/sybiltec" target="_blank" rel="noopener 
+                    noreferrer">twitter.com/sybiltec</a>.</p>
                 <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read More >></a>
                 <h2>5 Best Tools for Remote Working</h2>
                 <p>With an overwhelming amount of tools available today, it can be a difficult 
@@ -171,7 +171,7 @@ permalink: /blog/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
