--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -27,19 +27,19 @@ permalink: /cyber-security-best-practices-for-business/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cyber Security Best Practices - Blog | Sybiltech</title>       
+        <title>Cyber Security Best Practices - Blog | Sybiltec</title>       
         <meta name="Description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Cyber Security Best Practices - Blog | Sybiltech" />
+        <meta property="og:title" content="Cyber Security Best Practices - Blog | Sybiltec" />
         <meta property="og:description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog." />
         <meta property="og:url" content="https://sybiltec.com/cyber-security-best-practices-for-business/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/pink-silver-padlock-on-black-red-laptop-computer-turned-on-with-lights.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -291,7 +291,7 @@ permalink: /cyber-security-best-practices-for-business/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
