--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -15,21 +15,21 @@ permalink: /terms-and-conditions/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Terms & Conditions | Web Development E-Commerce | Sybiltech</title>       
+        <title>Terms & Conditions | Web Development E-Commerce | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
             in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Terms & Conditions | Web Development E-Commerce | Sybiltech" />
+        <meta property="og:title" content="Terms & Conditions | Web Development E-Commerce | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybiltec.com/terms-and-conditions/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -85,7 +85,7 @@ permalink: /terms-and-conditions/
         <div class="main section">
             <div class="container-1000">
                 <h2>Terms and Conditions</h2>
-                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltech ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
+                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
                 <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
 
@@ -137,7 +137,7 @@ permalink: /terms-and-conditions/
                     4.2. All implied conditions, warranties and terms are excluded from this agreement. If in any jurisdiction an implied condition, warrant or term cannot be excluded, then this sub paragraph shall be deemed to be reduced in effect, only to the extent necessary to release that specific condition, warranty or term.<br>
                     4.3. You are advised that Content may include technical inaccuracies or typographical errors. This is inevitable in any large website. We would be grateful if you bring to our immediate attention, any that you find.<br>
                     4.4. Our Website contains links to other internet websites. We have neither power nor control over any such website. You acknowledge and agree that we shall not be liable in any way for the Content of any such linked website, nor for any loss or damage arising from your use of any such website or from your buying services or goods via such a website.<br>
-                    4.5. The Sybil Mayard trading as Sybiltech Website and Sybil Mayard trading as Sybiltech Services are provided "as is". We make no representation or warranty that Our Website will be:<br>
+                    4.5. The Sybil Mayard trading as Sybiltec Website and Sybil Mayard trading as Sybiltec Services are provided "as is". We make no representation or warranty that Our Website will be:<br>
                     4.5.1 useful to you;<br>
                     4.5.2 of satisfactory quality;<br>
                     4.5.3 fit for a particular purpose;<br>
@@ -219,7 +219,7 @@ permalink: /terms-and-conditions/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
