--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -27,19 +27,19 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WebTip Wednesday Series Launched on Twitter | Sybiltech</title>       
-        <meta name="Description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltech on Twitter: twitter.com/Sybiltech1.">
+        <title>WebTip Wednesday Series Launched on Twitter | Sybiltec</title>       
+        <meta name="Description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltec on Twitter: twitter.com/sybiltec.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="WebTip Wednesday Series Launched on Twitter | Sybiltech" />
-        <meta property="og:description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltech on Twitter: twitter.com/Sybiltech1." />
+        <meta property="og:title" content="WebTip Wednesday Series Launched on Twitter | Sybiltec" />
+        <meta property="og:description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltec on Twitter: twitter.com/sybiltec." />
         <meta property="og:url" content="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/black-and-silver-laptop-computer-on-table.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -159,7 +159,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
