--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -26,19 +26,19 @@ permalink: /6-reasons-to-use-shopify/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shopify: 6 Reasons Why You Should be Using It | Sybiltech</title>       
+        <title>Shopify: 6 Reasons Why You Should be Using It | Sybiltec</title>       
         <meta name="Description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Shopify: 6 Reasons Why You Should be Using It | Sybiltech" />
+        <meta property="og:title" content="Shopify: 6 Reasons Why You Should be Using It | Sybiltec" />
         <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify." />
         <meta property="og:url" content="https://sybiltec.com/6-reasons-to-use-shopify/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/sale-tag-laptop-1200x630.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -249,7 +249,7 @@ permalink: /6-reasons-to-use-shopify/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
