--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -27,19 +27,19 @@ permalink: /6-tips-for-surviving-remote-working/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Remote Working: How to Survive with 6 Tips - Blog | Sybiltech</title>       
+        <title>Remote Working: How to Survive with 6 Tips - Blog | Sybiltec</title>       
         <meta name="Description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Remote Working: How to Survive with 6 Tips - Blog | Sybiltech" />
+        <meta property="og:title" content="Remote Working: How to Survive with 6 Tips - Blog | Sybiltec" />
         <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle." />
         <meta property="og:url" content="https://sybiltec.com/6-tips-for-surviving-remote-working/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/Laptop-notepad-pen-and-iphone-on-table-1200x630.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -199,7 +199,7 @@ permalink: /6-tips-for-surviving-remote-working/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
