--- a/faqs.html
+++ b/faqs.html
@@ -129,19 +129,19 @@ permalink: /faqs/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FAQs | Website Development & E-Commerce | Sybiltech</title>       
+        <title>FAQs | Website Development & E-Commerce | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="FAQs | Website Development & E-Commerce | Sybiltech" />
+        <meta property="og:title" content="FAQs | Website Development & E-Commerce | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
         <meta property="og:url" content="https://sybiltec.com/faqs/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -303,7 +303,7 @@ permalink: /faqs/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
