--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@ permalink: /
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
+        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
             in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
+        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/" />
-        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:creator" content="@Sybiltech1" />
-        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:creator" content="@sybiltec" />
+        <meta name="twitter:site" content="@sybiltec" />
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
@@ -79,7 +79,7 @@ permalink: /
         <div class="hero">
             <div class="container-1000">
                 <h4>Taking your online business further...</h4>
-                <h1>Sybiltech</h1>
+                <h1>Sybiltec</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
                 <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
             </div>
@@ -335,7 +335,7 @@ permalink: /
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
