Update cyber security blog post

--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -129,6 +129,10 @@ permalink: /cyber-security-best-practices-for-business/
 
                 <p>When setting up 2FA, you should also create a backup method to access your account if you lose your phone. This is usually in the format of a recovery code. Please store your recovery codes in a safe place such as in a password manager.</p>
 
+                <h2>Manage Permissions Wisely</h2>
+
+                <p>If your organisation hires employees or contractors, each user will need their own, separate login for each account. Logins should not be shared between users. Remember the "Principle of Least Privilege"; that is, don't automatically grant all users admin permissions. Instead, provide each user with the lowest level of access required to perform his or her job effectively and keep the number of users with admin permissions down to a minimum. Delete logins for users who no longer work for your organisation.</p>
+
                 <h2>Protect Your Data and Others' Data</h2>
 
                 <p>Lock the screen when away from your computer.</p>
@@ -206,7 +210,7 @@ permalink: /cyber-security-best-practices-for-business/
 
                 <p>Use common sense when shopping online. If prices look too good to be true, proceed with caution!</p>
 
-                <p>When away from home or your usual workplace, do not connect to public wi-fi networks. These networks are usually insecure and do not require a password to be accessed.</p>
+                <p>When away from home or your usual workplace, do not connect to public wi-fi networks. These networks are usually unsecured and do not require a password to be accessed. Instead, use a VPN (virtual private network). A VPN provides an extra layer of security by hiding your IP address and sending/receiving data through an encrypted "tunnel", so you can browse the Internet securely and anonymously. Consider choosing a service such as <a href="https://nordvpn.com/" target="_blank">NordVPN</a>.</p>
 
                 <p>If you are accessing your accounts on a public computer, do not leave the computer unattended and always log out when you finish your session. Some websites can save your username or email address to make logging in faster - do not check this box if using a public or shared computer. Below is an example of a warning on an online banking site:</p>
 
