--- a/clients.html
+++ b/clients.html
@@ -87,20 +87,78 @@ permalink: /clients/
                     <a href="#"><p style="font-size: 24px">↑</p></a>
                 </div>
 
-                <p>Throughout my freelancing career, I've helped a variety of clients achieve 
-                    their goal of improving their online presence. Here is a selection of my 
-                    most recent client projects and the services that were provided.</p>
+                <p>Throughout my freelancing career, I've helped clients from a wide range of industries achieve their goal of improving their online presence. Here is a selection of my most recent projects and the services that were provided.</p>
+
+                <div id="emrys-consulting" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting.jpg" alt="Emrys Consulting">
+                        </div>
+                        <div class="col-8">
+                            <h2>Emrys Consulting</h2>
+                            <h3 style="font-size: 18px;">Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://emrys.group/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="pendle-witch-company" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybiltec.com/images/clients/The-Pendle-Witch-Company.jpg" alt="The Pendle Witch Company">
+                        </div>
+                        <div class="col-8">
+                            <h2>The Pendle Witch Company</h2>
+                            <h3 style="font-size: 18px;">A range of beautifully crafted tools and DIY kits to assist you on your witchy journey</h3>
+                            <ul>
+                                <li>Design improvements</li>
+                                <li>Theme customisations</li>
+                                <li>Facebook Shop and Instagram Shop connection</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://pendlewitchcompany.com/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="ld-tiling-contractors" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybiltec.com/images/clients/LD-Tiling-Contractors.jpg" alt="LD Tiling Contractors">
+                        </div>
+                        <div class="col-8">
+                            <h2>LD Tiling Contractors</h2>
+                            <h3 style="font-size: 18px;">Offering a range of tiling services throughout the South East of England</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="nerowireart" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="Nerowireart">
+                            <img src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
                         </div>
                         <div class="col-8">
-                            <h2>Nerowireart</h2>
-                            <h3 style="font-size: 18px;">Handcrafted bonsai wire trees to enhance your home décor.</h3>
+                            <h2>NeroWireArt</h2>
+                            <h3 style="font-size: 18px;">Handcrafted bonsai wire trees to enhance your home décor</h3>
                             <ul>
                                 <li>Website design and development</li>
+                                <li>Dynamic pages</li>
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
@@ -119,13 +177,13 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>Tizane</h2>
-                            <h3 style="font-size: 18px;">News, events, dates and releases from the quirky South-East London-based singer/songwriter.</h3>
+                            <h3 style="font-size: 18px;">News, events, dates and releases from the quirky South-East London-based singer/songwriter</h3>
                             <ul>
-                                <li>Website review</li>
                                 <li>Design improvements</li>
                                 <li>Mailchimp integration</li>
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
+                                <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://tizane.net" 
@@ -142,7 +200,7 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>Together Matters</h2>
-                            <h3 style="font-size: 18px;">Talking, learning and working together to help create change in people's lives.</h3>
+                            <h3 style="font-size: 18px;">Talking, learning and working together to help create change in people's lives</h3>
                             <ul>
                                 <li>Design improvements</li>
                                 <li>Mailchimp integration</li>
@@ -167,7 +225,8 @@ permalink: /clients/
                                 <li>Shopify store development</li>
                                 <li>Advanced navigation system</li>
                                 <li>Sound effects</li>
-                                <li>Twitch video embeded into homepage</li>
+                                <li>Embedded Twitch videos</li>
+                                <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
@@ -185,7 +244,7 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>The Bamboo Wardrobe</h2>
-                            <h3 style="font-size: 18px;">Wholesale bamboo women's clothing</h3>
+                            <h3 style="font-size: 18px;">Wholesale women's bamboo clothing</h3>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Product management</li>
@@ -208,17 +267,34 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>Meitam London</h2>
-                            <h3 style="font-size: 18px;">One-off unique handcrafted pieces made from African natural materials.</h3>
+                            <h3 style="font-size: 18px;">One-off unique handcrafted pieces made from African natural materials</h3>
                             <ul>
                                 <li>Product management</li>
                                 <li>Photo editing in Adobe Photoshop</li>
                                 <li>Theme customisations</li>
+                                <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://meitamlondon.com//" 
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="tristarspas" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybiltec.com/images/clients/Tristarspas.jpg" alt="Tristarspas">
+                        </div>
+                        <div class="col-8">
+                            <h2>Tristarspas</h2>
+                            <h3 style="font-size: 18px;">Spas and hot tubs</h3>
+                            <ul>
+                                <li>Design improvements</li>
+                                <li>Theme customisations</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -232,7 +308,7 @@ permalink: /clients/
                             <h2>Global Banking School</h2>
                             <h3 style="font-size: 18px;">Flexible study that fits around you</h3>
                             <ul>
-                                <li>Landing page design</li>
+                                <li>Landing page design in Unbounce</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://globalbanking.ac.uk/" 
@@ -273,6 +349,9 @@ permalink: /clients/
                             <h3 style="font-size: 18px;">Avant-garde punkists play out like Joy Division meets Nico</h3>
                             <ul>
                                 <li>Website development</li>
+                                <li>Mailchimp setup</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://x-blu.com" 
@@ -335,8 +414,12 @@ permalink: /clients/
                             <h2>CNT Associates</h2>
                             <h3 style="font-size: 18px;">Business support and fundraising</h3>
                             <ul>
+                                <li>Website development</li>
+                                <li>WooCommerce setup</li>
                                 <li>Mailchimp integration</li>
-                                <li>Website audit</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://cntassociates.com"
@@ -373,10 +456,9 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>Audrey Zeitoun Coaching</h2>
-                            <h3 style="font-size: 18px;">Personal life coach and relationship coach</h3>
+                            <h3 style="font-size: 18px;">Relationship coaching, divorce coaching and family communication coaching </h3>
                             <ul>
                                 <li>Website development</li>
-                                <li>Search engine optimisation</li>
                                 <li>MailerLite integration</li>
 				                <li>Google Search Console submission</li>
                             </ul>
@@ -421,7 +503,7 @@ permalink: /clients/
                             <ul>
                                 <li>Theme refresh</li>
                                 <li>Theme customisations</li>
-                                <li>Blog publishing</li>
+                                <li>Blog post publishing</li>
 				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
@@ -441,12 +523,12 @@ permalink: /clients/
                             <h2>Esme Learning Solutions</h2>
                             <h3 style="font-size: 18px;">Professional development courses from top-tier universities powered by next-gen AI learning</h3>
                             <ul>
-                                <li>General website maintenance</li>
-                                <li>Managing products</li>
+                                <li>Website maintenance</li>
+                                <li>Product management</li>
                                 <li>Theme customisations</li>
                                 <li>HubSpot integration</li>
                                 <li>User acceptance testing</li>
-                                <li>Page creation in Shogun</li>
+                                <li>Landing page creation in Shogun</li>
                                 <li>Course registration form</li>
                             </ul>      
                             <div class="padding-btn">
@@ -466,12 +548,12 @@ permalink: /clients/
                             <h2>Future Communities UK</h2>
                             <h3 style="font-size: 18px;">Community engagement, training, consultancy and partnership work</h3>
                             <ul>
-                                <li>Website audit</li>
                                 <li>Website development</li>
-                                <li>Online resources for members only</li>
-                                <li>Google Analytics setup</li>
+                                <li>Members-only area for online resources</li>
                                 <li>Mailchimp integration</li>
+                                <li>Google Analytics setup</li>
 				                <li>Google Search Console submission</li>
+                                <li>Website review</li>
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
@@ -533,7 +615,7 @@ permalink: /clients/
                             <h2>SwipSearch</h2>
                             <h3 style="font-size: 18px;">Swipe right to get hired</h3>
                             <ul>
-                                <li>Website development</li>
+                                <li>Website design and development</li>
                                 <li>Landing page design</li>
                             </ul>
                             <div class="padding-btn">
@@ -556,13 +638,9 @@ permalink: /clients/
                                 <li>Website development</li>
                                 <li>Theme customisations</li>
                                 <li>Image gallery carousel with Slick</li>
-                                <li>Chatbot setup (Tidio)</li>
+                                <li>Tidio chat bot setup</li>
 				                <li>Google Search Console submission</li>
                             </ul>          
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://kyosk.co"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -576,10 +654,10 @@ permalink: /clients/
                             <h2>Focus on Learning</h2>
                             <h3 style="font-size: 18px;">Expert online English tuition by independent teachers</h3>
                             <ul>
-                                <li>Website audit</li>
+                                <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://focusonlearning.co.uk"
+                                <a class ="btn-secondary" href="https://folenglish.com/"
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
