Move Why Choose Me?

--- a/index.html
+++ b/index.html
@@ -280,6 +280,19 @@ permalink: /
                 </div>
             </div>
         </div>
+        <div class="events section grey">
+            <div class="container-1000">
+                <h2>Why Choose Me?</h2>
+                <hr class="left-align">
+                <h3>Attention to Detail</h3>
+                <p>I'll scrutinise every detail to make sure everything is just right.</p>
+                <h3>Affordable Prices</h3>
+                <p>Unlike other agencies, my services won't cost you a small fortune.</p>
+                <h3>A Range of Experiences</h3>
+                <p>I've developed a wide variety of skills through diverse work experiences, 
+                    ranging from music production to managing my own start-up.</p>
+            </div>
+        </div>
         <div class="contact section">
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
