Update page titles

--- a/404.html
+++ b/404.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Page Not Found | Web Development & E-Commerce | Sybiltec</title>       
+        <title>Page Not Found | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="noindex" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Page Not Found | Web Development & E-Commerce | Sybiltec" />
+        <meta property="og:title" content="Page Not Found | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/404/" />
