--- a/blog.html
+++ b/blog.html
@@ -15,13 +15,13 @@ permalink: /blog/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | Web Development &amp; E-Commerce Services | Sybiltec</title>       
+        <title>Blog | London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website development and e-commerce
         services for SMEs. Read my blog posts here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog | Web Development &amp; E-Commerce Services | Sybiltec" />
+        <meta property="og:title" content="Blog | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides website development and e-commerce
         services for SMEs. Read my blog posts here." />
         <meta property="og:url" content="https://sybiltec.com/blog/" />
