--- a/design.html
+++ b/design.html
@@ -15,12 +15,12 @@ permalink: /design/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Design | Web Development & E-Commerce Services | Sybiltec</title>       
+        <title>Design | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard can design a poster, leaflet or flyer for your event. View the gallery of my past projects here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Design | Web Development & E-Commerce Services | Sybiltec" />
+        <meta property="og:title" content="Design | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard can design a poster, leaflet or flyer for your event. View the gallery of my past projects here." />
         <meta property="og:url" content="https://sybiltec.com/design/" />
         <meta property="og:site_name" content="Sybiltec" />
