--- a/faqs.html
+++ b/faqs.html
@@ -129,12 +129,12 @@ permalink: /faqs/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FAQs | Website Development & E-Commerce | Sybiltec</title>       
+        <title>FAQs | London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="FAQs | Website Development & E-Commerce | Sybiltec" />
+        <meta property="og:title" content="FAQs | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
         <meta property="og:url" content="https://sybiltec.com/faqs/" />
         <meta property="og:site_name" content="Sybiltec" />
