--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@ permalink: /about/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Web Development & E-Commerce Services | Sybiltec</title>       
+        <title>About | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard is a freelance web developer. She graduated 
         from the University of Kent with an MSc in Computer Science. Read about her experiences here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="About | Web Development & E-Commerce Services | Sybiltec" />
+        <meta property="og:title" content="About | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard is a freelance web developer. She 
         graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
         <meta property="og:url" content="https://sybiltec.com/about/" />
