--- a/clients.html
+++ b/clients.html
@@ -15,12 +15,12 @@ permalink: /clients/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clients | Web Development & E-Commerce Services | Sybiltec</title>       
+        <title>Clients | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Clients | Web Development & E-Commerce Services | Sybiltec" />
+        <meta property="og:title" content="Clients | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
         <meta property="og:url" content="https://sybiltec.com/clients/" />
         <meta property="og:site_name" content="Sybiltec" />
