--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ permalink: /
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltec</title>       
+        <title>London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
             in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltec" />
+        <meta property="og:title" content="London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybiltec.com/" />
