--- a/projects.html
+++ b/projects.html
@@ -15,12 +15,12 @@ permalink: /projects/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects | Website Development & E-Commerce | Sybiltec</title>    
+        <title>Projects | London Website Design & Development | Sybiltec</title>    
         <meta name="Description" content="A selection of Sybil Mayard's personal projects.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Projects | Website Development & E-Commerce | Sybiltec" />
+        <meta property="og:title" content="Projects | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
         <meta property="og:url" content="https://sybiltec.com/projects/" />
         <meta property="og:site_name" content="Sybiltec" />
