--- a/services.html
+++ b/services.html
@@ -15,12 +15,12 @@ permalink: /services/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services | Web Development and SEO Services | Sybiltec</title>       
+        <title>Services | London Web Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Services | Web Development and SEO Services | Sybiltec" />
+        <meta property="og:title" content="Services | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here." />
         <meta property="og:url" content="https://sybiltec.com/services/" />
         <meta property="og:site_name" content="Sybiltec" />
